[gd_scene format=3 uid="uid://jb4clv2kbpah"]

[ext_resource type="Script" uid="uid://dqrcwetkpqvpc" path="res://script/enemy_component/summon_component.gd" id="1_aysl5"]

[node name="SummonComponent" type="Node2D" unique_id=997544220]
script = ExtResource("1_aysl5")

[node name="Area2D" type="Area2D" parent="." unique_id=875408503]
collision_layer = 0
collision_mask = 32

[node name="spawn_interval" type="Timer" parent="." unique_id=1763059600]
wait_time = 2.0

[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_area_2d_body_exited"]
[connection signal="timeout" from="spawn_interval" to="." method="_on_spawn_interval_timeout"]
